--- a/APITasks/appsettings.json
+++ b/APITasks/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=api_tasks;Uid=root;Pwd=root;"
+  }
 }
