--- a/APITasks/appsettings.json
+++ b/APITasks/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=api_tasks;Uid=root;Pwd=root;"
+    "DefaultConnection": "Server=localhost;Database=api_tasks;Uid=root;"
   }
 }
